// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picture renders correctly with preferThumbnails false 1`] = `
<picture>
  <img
    alt="title"
    css={
      Object {
        "map": undefined,
        "name": "m2yydh",
        "next": undefined,
        "styles": "
	padding-top: 66.73913043478261%;
",
        "toString": [Function],
      }
    }
    height={123}
    image={
      Object {
        "layout": "FIXED",
      }
    }
    width={456}
  />
</picture>
`;

exports[`Picture renders correctly with preferThumbnails true 1`] = `
<picture>
  <img
    alt="title"
    css={
      Object {
        "map": undefined,
        "name": "m2yydh",
        "next": undefined,
        "styles": "
	padding-top: 66.73913043478261%;
",
        "toString": [Function],
      }
    }
    height={123}
    image={
      Object {
        "layout": "FIXED",
      }
    }
    width={456}
  />
</picture>
`;

exports[`Picture renders correctly without extra props 1`] = `
<picture>
  <img
    alt="title"
    css={
      Object {
        "map": undefined,
        "name": "m2yydh",
        "next": undefined,
        "styles": "
	padding-top: 66.73913043478261%;
",
        "toString": [Function],
      }
    }
    image={
      Object {
        "layout": "CONSTRAINED",
      }
    }
  />
</picture>
`;
